# fun-king-functors

./: dune-project
lib/: dune
test/: dune
